src/main/gen/com/example/sleeclanguageextension/SleecParser.java
// This is a generated file. Not intended for manual editing.
package com.example.sleeclanguageextension;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.example.sleeclanguageextension.SleecTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SleecParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // otherwise InnerResponse
  public static boolean Alternative(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Alternative")) return false;
    if (!nextTokenIs(b, OTHERWISE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OTHERWISE);
    r = r && InnerResponse(b, l + 1);
    exit_section_(b, m, ALTERNATIVE, r);
    return r;
  }

  /* ********************************************************** */
  // "+" | "-" | "*"
  public static boolean BinaryArth(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryArth")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_ARTH, "<binary arth>");
    r = consumeToken(b, OP_1);
    if (!r) r = consumeToken(b, OP_2);
    if (!r) r = consumeToken(b, OP_3);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ScalarBinaryOp | BoolBinaryOp | NumericalOp
  public static boolean BinaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = ScalarBinaryOp(b, l + 1);
    if (!r) r = BoolBinaryOp(b, l + 1);
    if (!r) r = NumericalOp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "(" BoolExp BoolOp BoolExp ")"
  public static boolean BoolBinaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolBinaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_BINARY_OP, "<bool binary op>");
    r = consumeToken(b, "(");
    r = r && BoolExp(b, l + 1);
    r = r && BoolOp(b, l + 1);
    r = r && BoolExp(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Negation | BinaryOp | BoolTerminal
  public static boolean BoolExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolExp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_EXP, "<bool exp>");
    r = Negation(b, l + 1);
    if (!r) r = BinaryOp(b, l + 1);
    if (!r) r = BoolTerminal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // measure BoolName Colon BooleanRule
  public static boolean BoolMeasure(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolMeasure")) return false;
    if (!nextTokenIs(b, MEASURE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BOOL_MEASURE, null);
    r = consumeToken(b, MEASURE);
    r = r && BoolName(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, Colon(b, l + 1));
    r = p && BooleanRule(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // id
  public static boolean BoolName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, BOOL_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // and | or
  public static boolean BoolOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolOp")) return false;
    if (!nextTokenIs(b, "<bool op>", AND, OR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_OP, "<bool op>");
    r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "{" BoolName "}" | BoolValue
  public static boolean BoolTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_TERMINAL, "<bool terminal>");
    r = BoolTerminal_0(b, l + 1);
    if (!r) r = BoolValue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "{" BoolName "}"
  private static boolean BoolTerminal_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolTerminal_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && BoolName(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // true | false
  public static boolean BoolValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolValue")) return false;
    if (!nextTokenIs(b, "<bool value>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_VALUE, "<bool value>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // boolean
  public static boolean BooleanRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BooleanRule")) return false;
    if (!nextTokenIs(b, BOOLEAN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BOOLEAN);
    exit_section_(b, m, BOOLEAN_RULE, r);
    return r;
  }

  /* ********************************************************** */
  // ":"
  public static boolean Colon(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Colon")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLON, "<colon>");
    r = consumeToken(b, ":");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ConcernName "exists" Trigger ("and" MBoolExpr)? ("while" ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )? |
  //     ConcernName "when" Trigger ("and" MBoolExpr)? ("then" ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  public static boolean Concern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Concern_0(b, l + 1);
    if (!r) r = Concern_1(b, l + 1);
    exit_section_(b, m, CONCERN, r);
    return r;
  }

  // ConcernName "exists" Trigger ("and" MBoolExpr)? ("while" ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  private static boolean Concern_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConcernName(b, l + 1);
    r = r && consumeToken(b, EXISTS);
    r = r && Trigger(b, l + 1);
    r = r && Concern_0_3(b, l + 1);
    r = r && Concern_0_4(b, l + 1);
    r = r && Concern_0_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("and" MBoolExpr)?
  private static boolean Concern_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_3")) return false;
    Concern_0_3_0(b, l + 1);
    return true;
  }

  // "and" MBoolExpr
  private static boolean Concern_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && MBoolExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("while" ExtendedResponse)?
  private static boolean Concern_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_4")) return false;
    Concern_0_4_0(b, l + 1);
    return true;
  }

  // "while" ExtendedResponse
  private static boolean Concern_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WHILE);
    r = r && ExtendedResponse(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (meanwhile '(' Headless_Concern ')' )?
  private static boolean Concern_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_5")) return false;
    Concern_0_5_0(b, l + 1);
    return true;
  }

  // meanwhile '(' Headless_Concern ')'
  private static boolean Concern_0_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_0_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MEANWHILE);
    r = r && consumeToken(b, "(");
    r = r && Headless_Concern(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // ConcernName "when" Trigger ("and" MBoolExpr)? ("then" ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  private static boolean Concern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConcernName(b, l + 1);
    r = r && consumeToken(b, WHEN);
    r = r && Trigger(b, l + 1);
    r = r && Concern_1_3(b, l + 1);
    r = r && Concern_1_4(b, l + 1);
    r = r && Concern_1_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("and" MBoolExpr)?
  private static boolean Concern_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_3")) return false;
    Concern_1_3_0(b, l + 1);
    return true;
  }

  // "and" MBoolExpr
  private static boolean Concern_1_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && MBoolExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ("then" ExtendedResponse)?
  private static boolean Concern_1_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_4")) return false;
    Concern_1_4_0(b, l + 1);
    return true;
  }

  // "then" ExtendedResponse
  private static boolean Concern_1_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, THEN);
    r = r && ExtendedResponse(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (meanwhile '(' Headless_Concern ')' )?
  private static boolean Concern_1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_5")) return false;
    Concern_1_5_0(b, l + 1);
    return true;
  }

  // meanwhile '(' Headless_Concern ')'
  private static boolean Concern_1_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Concern_1_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MEANWHILE);
    r = r && consumeToken(b, "(");
    r = r && Headless_Concern(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "concern_start" Concern* "concern_end"
  public static boolean ConcernBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConcernBlock")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONCERN_BLOCK, "<concern block>");
    r = consumeToken(b, CONCERN_START);
    p = r; // pin = 1
    r = r && report_error_(b, ConcernBlock_1(b, l + 1));
    r = p && consumeToken(b, CONCERN_END) && r;
    exit_section_(b, l, m, r, p, SleecParser::ConcernBlock_recover);
    return r || p;
  }

  // Concern*
  private static boolean ConcernBlock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConcernBlock_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Concern(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConcernBlock_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // !(concern_end | def_start | rule_start | purpose_start | <<eof>>)
  static boolean ConcernBlock_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConcernBlock_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ConcernBlock_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // concern_end | def_start | rule_start | purpose_start | <<eof>>
  private static boolean ConcernBlock_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConcernBlock_recover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONCERN_END);
    if (!r) r = consumeToken(b, DEF_START);
    if (!r) r = consumeToken(b, RULE_START);
    if (!r) r = consumeToken(b, PURPOSE_START);
    if (!r) r = eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // id
  public static boolean ConcernName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConcernName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, CONCERN_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // id
  public static boolean ConstantName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstantName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, CONSTANT_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // constant ConstantName "=" number
  public static boolean ConstantRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstantRule")) return false;
    if (!nextTokenIs(b, CONSTANT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT_RULE, null);
    r = consumeToken(b, CONSTANT);
    r = r && ConstantName(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, consumeToken(b, "="));
    r = p && consumeToken(b, NUMBER) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // "def_start" Definition* "def_end"
  public static boolean Defblock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Defblock")) return false;
    if (!nextTokenIs(b, DEF_START)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEF_START);
    r = r && Defblock_1(b, l + 1);
    r = r && consumeToken(b, DEF_END);
    exit_section_(b, m, DEFBLOCK, r);
    return r;
  }

  // Definition*
  private static boolean Defblock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Defblock_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Definition(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Defblock_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // UnlessRule MBoolExpr (then InnerResponse)?
  public static boolean Defeater(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Defeater")) return false;
    if (!nextTokenIs(b, UNLESS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = UnlessRule(b, l + 1);
    r = r && MBoolExpr(b, l + 1);
    r = r && Defeater_2(b, l + 1);
    exit_section_(b, m, DEFEATER, r);
    return r;
  }

  // (then InnerResponse)?
  private static boolean Defeater_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Defeater_2")) return false;
    Defeater_2_0(b, l + 1);
    return true;
  }

  // then InnerResponse
  private static boolean Defeater_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Defeater_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, THEN);
    r = r && InnerResponse(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MeasureRule | ConstantRule | EventRule
  public static boolean Definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Definition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFINITION, "<definition>");
    r = MeasureRule(b, l + 1);
    if (!r) r = ConstantRule(b, l + 1);
    if (!r) r = EventRule(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // id
  public static boolean EventName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EventName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, EVENT_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // event EventName
  public static boolean EventRule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EventRule")) return false;
    if (!nextTokenIs(b, EVENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EVENT);
    r = r && EventName(b, l + 1);
    exit_section_(b, m, EVENT_RULE, r);
    return r;
  }

  /* ********************************************************** */
  // Response ("while" ExtendedResponse)?
  public static boolean ExtendedResponse(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExtendedResponse")) return false;
    if (!nextTokenIs(b, "<extended response>", ID, NOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXTENDED_RESPONSE, "<extended response>");
    r = Response(b, l + 1);
    r = r && ExtendedResponse_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ("while" ExtendedResponse)?
  private static boolean ExtendedResponse_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExtendedResponse_1")) return false;
    ExtendedResponse_1_0(b, l + 1);
    return true;
  }

  // "while" ExtendedResponse
  private static boolean ExtendedResponse_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExtendedResponse_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WHILE);
    r = r && ExtendedResponse(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // exists Trigger (and MBoolExpr)? (while ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )? |
  //     when Trigger (and MBoolExpr)? (then ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  public static boolean Headless_Concern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern")) return false;
    if (!nextTokenIs(b, "<headless concern>", EXISTS, WHEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, HEADLESS_CONCERN, "<headless concern>");
    r = Headless_Concern_0(b, l + 1);
    if (!r) r = Headless_Concern_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // exists Trigger (and MBoolExpr)? (while ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  private static boolean Headless_Concern_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXISTS);
    r = r && Trigger(b, l + 1);
    r = r && Headless_Concern_0_2(b, l + 1);
    r = r && Headless_Concern_0_3(b, l + 1);
    r = r && Headless_Concern_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (and MBoolExpr)?
  private static boolean Headless_Concern_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_2")) return false;
    Headless_Concern_0_2_0(b, l + 1);
    return true;
  }

  // and MBoolExpr
  private static boolean Headless_Concern_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && MBoolExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (while ExtendedResponse)?
  private static boolean Headless_Concern_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_3")) return false;
    Headless_Concern_0_3_0(b, l + 1);
    return true;
  }

  // while ExtendedResponse
  private static boolean Headless_Concern_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WHILE);
    r = r && ExtendedResponse(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (meanwhile '(' Headless_Concern ')' )?
  private static boolean Headless_Concern_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_4")) return false;
    Headless_Concern_0_4_0(b, l + 1);
    return true;
  }

  // meanwhile '(' Headless_Concern ')'
  private static boolean Headless_Concern_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MEANWHILE);
    r = r && consumeToken(b, "(");
    r = r && Headless_Concern(b, l + 1);
    r = r && consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  // when Trigger (and MBoolExpr)? (then ExtendedResponse)? (meanwhile '(' Headless_Concern ')' )?
  private static boolean Headless_Concern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WHEN);
    r = r && Trigger(b, l + 1);
    r = r && Headless_Concern_1_2(b, l + 1);
    r = r && Headless_Concern_1_3(b, l + 1);
    r = r && Headless_Concern_1_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (and MBoolExpr)?
  private static boolean Headless_Concern_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_1_2")) return false;
    Headless_Concern_1_2_0(b, l + 1);
    return true;
  }

  // and MBoolExpr
  private static boolean Headless_Concern_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && MBoolExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (then ExtendedResponse)?
  private static boolean Headless_Concern_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Headless_Concern_1_3")) return false;
    Headless_Concern_1_3_0(b, l + 1);
    return true;
  }
